<resources>
    <string name="app_name">NetPOS</string>
    <string name="_app_name">storm_app</string>
    <string name="_password">C0R3MELTDOWN!</string>
    <string name="netpos_logo">Netpos Logo</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_image">User Image</string>
    <string name="welcome">Welcome</string>
    <string name="dapo_uche">Dapo Uche</string>
    <string name="service_item">Service item</string>
    <string name="transactions">Transaction</string>
    <string name="sales">Sales</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="naira_symbol">₦</string>
    <string name="timeOut">Time out! Please try again</string>
    <string name="an_error_occurred">An error occurred please try again</string>
    <string name="enter_pin">Enter Card Pin</string>
    <string name="proceess">Process</string>
    <string name="transaction_failed">transaction failed</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="print">Print</string>
    <string name="retry">Retry</string>
    <string name="refund">Refund</string>
    <string name="reprint">Reprint</string>
    <string name="history">history</string>
    <string name="search">Search</string>
    <string name="select_date">Select Date</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="last_transaction">LAST TRANSACTION</string>
    <string name="transaction_type">TRANSACTION TYPE</string>
    <string name="amount">AMOUNT</string>
    <string name="_20k">₦20000</string>
    <string name="transaction_ref">REFERENCE NUMBER</string>
    <string name="sample_ref">2389478984048378479</string>
    <string name="_process">Process</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="payment_approved">Payment Approved</string>
    <string name="history_header_template">Select transaction to %s</string>
    <string name="enter_name">Customer Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="close_dialog">close dialog</string>
    <string name="enter_your_registered_e_mail_with_storm">Enter your registered E-mail with Storm</string>
    <string name="nip_notifications">NIP NOTIFICATIONS</string>
    <string name="beneficiaryAccountNumber"><b>Beneficiary Account Number:</b> %s</string>
    <string name="sourceName"><b>Source Name:</b> %s</string>
    <string name="sourceAccountNumber"><b>Source Account Number:</b> %s</string>
    <string name="nip_amount"><b>Amount:</b> ₦%s</string>
    <string name="createdAt"><b>Created At:</b> %s</string>
    <string name="session_code">Enter narration</string>
    <string name="tap_to_copy_reference">Tap to copy reference</string>
    <string name="done">Done</string>
    <string name="account_transfer_note">Please note that you might not be notified of this payment immediately, but you can always verify the status of the transaction on the transactions page on your dashboard.</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="savings">Savings</string>
    <string name="current">Current</string>
    <string name="bonus_account">Bonus Account</string>
    <string name="credit">Credit</string>
    <string name="investment_account">Investment Account</string>
    <string name="universal_account">Universal Account</string>
    <string name="cancel">cancel</string>
    <string name="nibss_ip">NIBSS IP Address</string>
    <string name="nibss_port">NIBSS port</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="key1">NIBSS Key 1</string>
    <string name="key2">NIBSS Key 2</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="end_of_day_transaction">End Of Day Transaction</string>
    <string name="approved_transactions">Approved Transactions</string>
    <string name="declined_transactions">Declined Transactions</string>
    <string name="all">All</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="total_transaction_count">Total Transactions: %s</string>
    <string name="total_transaction_amount">Total Amount: %s</string>
    <string name="enter_reference">Enter Reference</string>
    <string name="print_all">Print All</string>
    <string name="log_out">Log Out</string>
    <string name="completion">Completion</string>
    <string name="new_preauth">New</string>
    <string name="qr_payment">Qr Payment</string>
    <string name="close">close</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="use_terminal_id_from_logged_in_account">Use Terminal ID from logged in account</string>
    <string name="remark">Remark</string>
    <string name="remark_optional">Remark (Optional)</string>
    <string name="view">view</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="lbl_continue">Continue</string>
    <string name="summary">Summary</string>
    <string name="provider">Provider</string>
    <string name="bill_package">Package</string>
    <string name="account_id">Account Id</string>
    <string name="account_name">Account Name</string>
    <string name="lbl_convinience_fee">Convinence Fee</string>
    <string name="proceed">Proceed</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="confirm_mobile_number">Confirm Mobile Number</string>
    <string name="lbl_pay">Pay</string>
    <string name="daily">Daily</string>
    <string name="weekely">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="enter_smart_card_number">SmartCard Number</string>
    <string name="enter_meter_number">Meter Number</string>
    <string name="enter_email_address">Email Address</string>
    <string name="service_asset">Service Asset</string>
    <string name="bills">BILLS</string>
    <string name="scan_to_pay">Scan to Pay</string>
    <string name="masterpass_qr">masterpass qr</string>
    <string name="requerying_qr_transaction">ReQuerying transaction in %ds</string>
    <string name="req_trans">ReQuerying Transaction</string>
    <string name="zenith_qr_registration">Zenith QR Registration</string>
    <string name="bank_verification_number_bvn">Bank Verification Number (BVN)</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select LGA</string>
    <string name="select_merchant_category">Select Merchant Category</string>
    <string name="register">Register</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="select_receipt_format">Select receipt format</string>
    <string name="bluecode">BlueCode</string>
    <string name="bluecode_registration">BlueCode Registration</string>
    <string name="account_number">Account Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="address">Address</string>
    <string name="error_loading_states_tap_to_try_again">Error loading states, Tap to try again!</string>
    <string name="give">Give</string>
    <string name="noTransactionsToView">No transaction to View</string>
    <string name="noTransactionsToPrint">No transaction to print</string>
    <string name="userDataNotSet">User data not supplied</string>
    <string name="userMD">2033LAGPOOO7885</string>
    <string name="wemaAgencyMD">2035LA207031072</string>
    <string name="terminal_val_failed">Terminal validation failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zenith_bank">Zenith Bank</string>
    <string name="unavailable_try_again">Error fetching account details please try again later…</string>
    <string name="pay_by_transfer">Pay By Transfer</string>
    <string name="pay_by_transfer_">Pay By Transfer</string>
    <string name="transacion_received">NetPos Transaction Notification!</string>
    <string name="pbt_transactions">(PBT) Transactions History</string>
    <string name="transaction_details">TRANSACTION DETAILS</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="veiw_eod">View End Of Day</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="settings">Settings</string>
    <string name="balance_enquiry">Balance Inquiry</string>
    <string name="purchase">Purchase</string>
    <string name="terminal_not_configured">Terminal not configured</string>
    <string name="checking_bal">Checking Balance…</string>
    <string name="acc_bal">Account Balance:</string>
    <string name="error_occured">An error occurred while fetching end of day, try again</string>
    <string name="please_wait">Please wait…</string>
    <string name="time_out">Timed out, please try again later!</string>
    <string name="processing">Processing…</string>
    <string name="failed">Failed! Please try again later</string>
    <string name="please_login">Please login</string>
    <string name="pin_too_short">Pin too short</string>
    <string name="storage_permission_rationale_for_download">You need to grant this permission to save this file</string>
    <string name="fileDownloaded">File downloaded</string>
    <string name="transaction_status_place_holder">TRANSACTION   %1$s</string>
    <string name="app_version_place_holder"><![CDATA[App Version:   %1$s]]></string>
    <string name="receipt_not_available">Unavailable at the moment, please try again later!</string>
    <string name="transaction_receipt">Transaction Receipt</string>
    <string name="merchant_name_place_holder">Merchant:   %1$s</string>
    <string name="netplus_logo">Netplus Logo</string>
    <string name="contact_customer_care_for_support">Contact Customer Care for support</string>
    <string name="contact_us">Contact Us:</string>
    <string name="netplus_address">4, Hakeem Dickson Drive, Off TF, Kuboye Street, Oniru, Lagos</string>
    <string name="receipt_footer_message">4, Hakeem Dickson Drive, Off TF, Kuboye Street, Oniru, Lagos \nEmail: info@netplusdotcom.com \nTel: +234 818 778 2542, +234 809 999 0660</string>
    <string name="email_info_netplusdotcom_com">Email: info@netplusdotcom.com</string>
    <string name="netplus_phone_number">Tel: +234 818 778 2542, +234 809 999 0660</string>
    <string name="transaction_place_holder">Transaction Id: %1$s</string>
    <string name="order_id_place_holder">Order Id: %1$s</string>
    <string name="narration_place_holder">Narration: %1$s</string>
    <string name="card_owner_place_holder">Card Owner: %1$s</string>
    <string name="terminal_id_place_holder">Terminal Id:   %1$s</string>
    <string name="stan_place_holder">STAN:   %1$s</string>
    <string name="date_time_place_holder">DATE/TIME: %1$s</string>
    <string name="amount_place_holder">Amount:   %1$S</string>
    <string name="trans_ref_place_holder">TRANS REF:   %1$s</string>
    <string name="account_type_place_holder">Account Type:   %1$s</string>
    <string name="card_type_place_holder">Card Type:   %1$s</string>
    <string name="masked_pan_place_holder">Masked Pan:   %1$s</string>
    <string name="card_holder_place_holder">Card Holder:   %1$s</string>
    <string name="expiry_date">EXPIRY DATE: **/**</string>
    <string name="response_code_place_holder">Response Code:   %1$s</string>
    <string name="message_place_holder">Message:   %1$s</string>
    <string name="menu_item_transactions">Transactions</string>
    <string name="menu_item_end_of_day">End Of Day</string>
    <string name="menu_item_display_qr">Display QR</string>
    <string name="check_bal">Balance</string>
</resources>