<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.woleapp.netpos.viewmodels.BlueCodeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_16dp">

            <ImageView
                android:id="@+id/zenith_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/zenith_qr_registration"
                android:src="@drawable/ic_bluecode_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/qr_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/bluecode_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zenith_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_number_wrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:hint="@string/account_number"
                app:layout_constraintTop_toBottomOf="@id/qr_registration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@={viewmodel.blueCodePayload.acctNumber}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_name_wrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:hint="@string/account_name"
                app:layout_constraintTop_toBottomOf="@id/account_number_wrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={viewmodel.blueCodePayload.acctName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/bank_spinner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_bank"
                app:layout_constraintBottom_toTopOf="@id/bank_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/bank_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:background="@drawable/services_edittext_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_name_wrapper" />

            <TextView
                android:id="@+id/select_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_state"
                app:layout_constraintBottom_toTopOf="@id/states_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/states_loading_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:onClick="@{() -> viewmodel.fetchStates()}"
                android:text="@string/error_loading_states_tap_to_try_again"
                android:textColor="@color/design_default_color_error"
                app:layout_constraintStart_toEndOf="@id/select_state_text"
                app:layout_constraintTop_toTopOf="@id/select_state_text"
                app:widgetVisibility="@{viewmodel.fetchStatesFailed}" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/states_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/services_edittext_background"
                app:layout_constraintTop_toBottomOf="@id/bank_spinner" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_wrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@id/states_spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={viewmodel.blueCodePayload.addr}" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/select_state_text"
                app:layout_constraintStart_toEndOf="@id/select_state_text"
                app:layout_constraintTop_toTopOf="@id/select_state_text"
                app:progressBarInProgress="@{viewmodel.statesLoading}" />


            <TextView
                android:id="@+id/getMCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:background="@drawable/services_edittext_background"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/select_merchant_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_wrapper" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/register"
                app:buttonInProgress="@{viewmodel.registrationInProgress}"
                app:layout_constraintTop_toBottomOf="@id/getMCC" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:elevation="@dimen/dimen_4dp"
                app:layout_constraintBottom_toBottomOf="@id/register"
                app:layout_constraintEnd_toEndOf="@id/register"
                app:layout_constraintTop_toTopOf="@id/register"
                app:progressBarInProgress="@{viewmodel.registrationInProgress}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>